setting the connexion to the API

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-RTE_API_CLIENT_ID=""
-RTE_API_CLIENT_SECRET=""
+RTE_API_CLIENT_ID="15e8e455-119f-4d23-b3ba-a0dc5f1cecf6"
+RTE_API_CLIENT_SECRET="1d3edd6a-0305-4545-8dce-6c1c6ffc3bd5"
