Setting local database for the copy

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 RTE_API_CLIENT_ID="15e8e455-119f-4d23-b3ba-a0dc5f1cecf6"
 RTE_API_CLIENT_SECRET="1d3edd6a-0305-4545-8dce-6c1c6ffc3bd5"
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=EnegyDB
+DB_USER=Admin
+DB_PASSWORD='Hakagami2909@@@'
+RTE_API_BASE_URL="https://eco2mix.rte-france.com"
+RTE_API_TOKEN_URL="https://eco2mix.rte-france.com/auth/token"
