Yearly forecast correctly fetch from the RTE API and saved in to our docker Postgres

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,9 @@ services:
   db:
     image: postgres:15
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: energy
+      POSTGRES_USER: roboticuser
+      POSTGRES_PASSWORD: Hakagami2909@@@
+      POSTGRES_DB: energydb
     ports:
       - "5432:5432"
     volumes:
